# hausprojekt_miet_verwaltung

./: Dockerfile  app.py  functions.py  models.py  pyproject.toml  readme.md
hausverwaltung/: app.py  functions.py  models.py
