[tool.poetry]
name = "mietverwaltung-baumi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
SQLAlchemy = "^2.0.30"
streamlit = "^1.35.0"
streamlit-authenticator = "^0.3.2"
plotly = "^5.22.0"
alembic = "^1.13.1"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
